[package]

name = "lru-cache"
version = "0.2.0"
license = "MIT/Apache-2.0"
description = "A cache that holds a limited number of key-value pairs. Forked due to lack of maintenance"
authors = [
    "Stepan Koltsov <stepan.koltsov@gmail.com>",
    "Jakub Chłapiński <jakub.chlapinski@kodegenix.pl"
]

repository = "https://github.com/jchlapinski/lru-cache"
homepage = "https://github.com/jchlapinski/lru-cache"
documentation = "https://jchlapinski.github.io/lru-cache/lru_cache"
keywords = ["data-structures"]
readme = "README.md"

[features]
heapsize_impl = ["heapsize", "linked-hash-map/heapsize_impl"]

[dependencies]
linked-hash-map = { git = "https://github.com/jchlapinski/linked-hash-map.git" }
heapsize = { version = "0.3.9", optional = true }
